# ddns-updater

./: Cargo.toml  README.md  ddns.toml
src/: main.rs
