[package]
name = "ddns-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public-ip = "0.2.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.3"
